--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material-nextjs": "^6.3.1",
     "next": "15.1.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
